src/tests/errors/lexing/test01.cmp
program main 
begin
    var x : _int  /* wrong id */
end 